# WEST_IC_antenna

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  prek.toml  pyproject.toml  requirements.txt  setup.py  tox.ini
.binder/: postBuild  requirements.txt
.github/workflows/: pylint.yml  python-publish.yml  testing.yml
doc/: Full_torus_ICLH_plasma_6s_HFSSDesign1.s4p  HFSS_ERM_IC_test.s4p  Makefile  Plasma Scattering Matrix Measurement.ipynb  WEST ICRH Antenna RF Modelling.docx  WEST_Antenna_Circuit_Model.pptx  chart_manual_matching.ipynb  chart_manual_matching_vacuum.ipynb  chart_strap_reactance.ipynb  conf.py  coupling_to_ideal_load.ipynb  coupling_to_plasma_from_COMSOL.ipynb  coupling_to_plasma_from_TOPICA.ipynb  coupling_to_water_tank.ipynb  custom.css  digital_twin.ipynb  example_vacuum.ipynb  index.rst  introduction.ipynb  matching.ipynb  matching_automatic.ipynb  phase_scan.ipynb  strap_reactance.ipynb  tutorial_matching_automatic.ipynb  tutorial_matching_manual.ipynb
doc/api/: digital_twin.rst  index.rst  west_ic_antenna.digital_twin.DigitalTwin.rst
doc/source/: antenna.rst  conf.py  index.rst  topica.rst
west-ic-antenna/: antenna.py
west-ic-antenna/data/Sparameters/: WEST_ICRH_Stub_30to70MHz.s3p
west-ic-antenna/data/Sparameters/front_faces/TOPICA/: S_TSproto12_48MHz_Profile2.s4p  S_TSproto12_55MHz_Hmode_LAD12-2.5cm.s4p  S_TSproto12_55MHz_Hmode_LAD6.s4p  S_TSproto12_55MHz_Profile1.s4p
west_ic_antenna/: __init__.py  antenna.py  digital_twin.py  topica.py
west_ic_antenna/data/Sparameters/: WEST_ICRH_Bridge_30to70MHz.s3p  WEST_ICRH_Transf_Window_PumpHolePMC.s2p
west_ic_antenna/data/Sparameters/front_faces/COMSOL/: ORNL_front_face_conventional.s4p  ORNL_front_face_plasma_inside.s4p
west_ic_antenna/data/Sparameters/front_faces/PetraM/: WEST_ICRH_plasma_PetraM.s4p  (+1 more)
west_ic_antenna/test/: test_antenna.py
west_ic_antenna/test/ANSYS_benchmarks/: WEST_capacitor_equivalent_circuit_50ohm_ports.s2p  WEST_capacitor_equivalent_circuit_bridge_antenna_ports.s2p  WEST_capacitor_equivalent_circuit_bridge_antenna_ports_renorm50ohm.s2p  WEST_capacitor_test_connection.s1p  WEST_capacitor_test_connection_renorm50ohm.s1p
(+21 files in other folders)
