[project]
name = "west-ic-antenna"
dynamic = ["version"]
description = "WEST ICRH Antenna Electrical Model"
readme = "README.md"
requires-python = ">=3.11"
license = {text="LICENSE"}
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pytest>=8.3.3",
    "scikit-rf>=1.4.1",
    "tqdm>=4.67.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "west_ic_antenna.__version__"}