[project]
name = "west-ic-antenna"
dynamic = ["version"]
description = "WEST ICRH Antenna Electrical Model"
readme = "README.md"
requires-python = ">=3.11"
license = {text="LICENSE"}
dependencies = [
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "scikit-rf>=1.3.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]
docs = [
    "ipykernel>=6.29.5",
    "nbsphinx>=0.9.5",
    "pandoc>=2.4",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "west_ic_antenna.__version__"}
