[project]
name = "west-ic-antenna"
dynamic = ["version"]
description = "WEST ICRH Antenna Electrical Model"
readme = "README.md"
requires-python = ">=3.11"
license = {text="LICENSE"}
dependencies = [
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "scikit-rf>=1.3.0",
    "tqdm>=4.67.0",
]

[tool.setuptools]
# license-files = ["LICENSE"]  # tempfix bug in setuptool
license-files = []

[tool.setuptools.dynamic]
version = {attr = "west_ic_antenna.__version__"}

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "prek>=0.3.2",
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "lint"},
]
test = [
    "pytest>=9.0.2",
]
docs = [
    "ipykernel>=6.29.5",
    "nbsphinx>=0.9.5",
    "pandoc>=2.4",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
lint = [
    "ruff>=0.15.1",
]
